<?xml version="1.0"?>
<package format="2">
  <name>object_tracker</name>
  <version>1.0.0</version>
  <description>The object tracker package</description>

  <maintainer email="petrivi2@fel.cvut.cz">Vit Petrik</maintainer>
 
  <license>BSD 3-Clause</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>mrs_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>sensor_msgs</depend>
  <depend>uwb_range</depend>

  <depend>tf2_eigen</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
